user first config flag
