# storage/api-docs/api-docs.json
@@ -1650,6 +1650,80 @@
                 ]
             }
         },
+        "/api/user/config": {
+            "patch": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update is_first_config status of authenticated user",
+                "operationId": "0ad8651103c76a1a425b68d47a01b775",
+                "responses": {
+                    "200": {
+                        "description": "is_first_config status updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "success"
+                                                },
+                                                "user": {
+                                                    "description": "Updated User object",
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "status_page": {
+                                            "type": "integer",
+                                            "example": 200
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "message": {
+                                                    "type": "string",
+                                                    "example": "fail"
+                                                },
+                                                "errors": {
+                                                    "type": "string",
+                                                    "example": "fail"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "status_page": {
+                                            "type": "integer",
+                                            "example": 401
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/register": {
             "post": {
                 "tags": [
